testdata/golden/sema/invalid/concurrency/nonblocking_calls_channel.sg
// Invalid: @nonblocking function calls blocking channel methods
@nonblocking
pub fn bad_channel(ch: &Channel<int>) -> nothing {
    ch.send(1);
    let _ = ch.recv();
    ch.close();
}
